--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar dark navbar-expand-lg navbar-dark bg-info">
       <div>
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
