--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar dark navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div>
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -20,7 +20,7 @@
                   <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-warning">
                       <li class="nav-item">
                           <a class="nav-link active" aria-current="page" href="/">Home</a>
                       </li>
@@ -47,7 +47,7 @@
   </nav>
     <br>
     <div class="m-3">
-        <h1 class="border rounded border-3 border-info px-3 py-2 text-info d-inline">Tech Blog</h1>
+        <h1 class="border rounded border-3 border-warning px-3 py-2 text-warning d-inline">Tech Blog</h1>
     </div>
     {{{body}}}
 
