--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,13 +22,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-warning">
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="/">Home</a>
+                          <a class="nav-link active text-warning" aria-current="page" href="/">Home</a>
                       </li>
                       <li class="nav-item">
                           {{#if loggedIn}}
-                          <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
+                          <a class="nav-link active text-warning" aria-current="page" href="/dashboard">Dashboard</a>
                           {{else}}
-                          <a class="nav-link active" aria-current="page" href="/login">Dashboard</a>
+                          <a class="nav-link active text-warning" aria-current="page" href="/login">Dashboard</a>
                           {{/if}}
                       </li>
                       {{#if loggedIn}}
