--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <title>The Tech Blog</title>
 </head>
 
-<body>
+<body class="bg-secondary">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div>
           <div class="container-fluid">
@@ -33,11 +33,11 @@
                       </li>
                       {{#if loggedIn}}
                       <li class="nav-item">
-                          <a id="logout" class="nav-link active" aria-current="page" href="#">Logout</a>
+                          <a id="logout" class="nav-link active text-warning" aria-current="page" href="#">Logout</a>
                       </li>
                       {{else}}
                           <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                              <a class="nav-link active text-warning" aria-current="page" href="/login">Login</a>
                           </li>
                       {{/if}}
                   </ul>
