--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,7 +47,7 @@
   </nav>
     <br>
     <div class="m-3">
-        <h1 class="px-3 py-2 text-warning d-inline">Tech Blog</h1>
+        <h1 class="px-3 py-2 text-warning text-center">Tech Blog</h1>
     </div>
     {{{body}}}
 
